Navigator: Fix blurry icons
Before this commit we were using the wrong CSS variable. It is an img
and thus we should use --btn-img-size-s.

--- a/browser/css/jssidebar.css
+++ b/browser/css/jssidebar.css
@@ -315,8 +315,8 @@ button#button2.ui-pushbutton.jsdialog.sidebar {
 	background-color: transparent;
 }
 #NavigatorPanel .ui-treeview-icon {
-	width: var(--btn-size-s);
-	height: var(--btn-size-s);
+	width: var(--btn-img-size-s);
+	height: var(--btn-img-size-s);
 }
 #NavigatorPanel div.selected {
 	background-color: var(--color-background-dark);
